realized mobile menu was not doing anything after launch. that is not working locally, with direct inclusion of foundation.topbar.js; will need to make sure it transfers to server. also note, bg image not showing up on iphone. issues with box-sizing?

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -9611,7 +9611,7 @@ th.hide-for-touch {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: -200px;
+  margin-bottom: -20px;
   max-width: initial;
   display: inline-block;
   border-top: 8px solid #50C8F0;
